# Poetry_practice

./: .pre-commit-config.yml  .secrets.baseline  Makefile  README.md  next-env.d.ts  next.config.mjs  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
.github/: pre-commit.yml
app/: global.css  layout.tsx  page.tsx
app/about/: page.tsx
app/components/: chart.tsx  footer.tsx  header.tsx
app/insights/: page.tsx
app/insights/[slug]/: page.tsx
app/insights/posts/: example.mdx
app/services/: page.tsx
src/app/: __init__.py  main.py
tests/: test_basic.py
