[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A clean, production-ready Python template (Poetry, Makefile, Testing, Streamlit)."
authors = ["Developer Name <email@example.com>"]
readme = "README.md"
package-mode = false    # <-- prevents packaging errors

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.0"
streamlit = "^1.51.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.5.0"
black = "^24.1.0"
mypy = "^1.8.0"
pre-commit = "^4.5.0"
detect-secrets = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


